# uni_cyber_project

./: .gitignore  README.md  planning.ods  vulnurabilities.odt
client/: AESWrapper.cpp  Base64Wrapper.cpp  Base64Wrapper.h  RSAWrapper.h  cksum_new.cpp  data.txt  encrypted  example  gpt.cpp  main.cpp  me.info  transfer.info  try.cpp
server/: pyproject.toml
server/server/: E2E.py  __init__.py  crcfile.py  main.py  messages.py  protocol.py  responses.py  test.py
server/server/files/: main.cpp
server/tests/: context.py  protocol_test.py
